# q1-FACESWAP

./: .gitignore  install_and_verify.py  install_requirements.bat  pyproject.toml  requirements.txt  run.bat
assets/: .env  .env_user.example
assets/docs/: CONFIG_ENV.md  LIBRARY_API.md  LIBRARY_USAGE.md
core/: __init__.py  __main__.py  config.py  errors.py  face_model_builder.py  ffmpeg_runner.py  io_image.py  io_video.py  job_state.py  library_api.py  model_manager.py  orchestrator.py  pipeline_state.py  preview_utils.py  processor_config.py  project_layout.py  provider_policy.py  public_api.py  runtime_ui.py  swarm_engine.py  types.py  ui_log.py  utils.py
core/processors/: detect_proc.py  parse_proc.py  restore_proc.py  swap_proc.py
gui/: __init__.py  controller.py  main.py  main_ui.py  project_bootstrap.py  widgets.py
gui/actions/: __init__.py  dialog_actions.py  gallery_actions.py  health_actions.py  main_ui_logic.py  pipeline_actions.py  preview_actions.py  run_actions.py  ui_handlers.py
gui/components/: cards.py  dialogs.py
gui/config/: __init__.py  loader.py  schema.py  validator.py
gui/runtime/: __init__.py  events.py  media.py  preview_bridge.py  preview_engine.py  (+1 more)
scripts/: smoke_cli.ps1
tests/: test_controller_backpressure.py  test_dry_run.py  test_face_model_builder.py  test_face_model_service.py  test_gui_enhancements.py  test_job_state.py  test_model_manifest.py  test_module_entrypoint.py  test_output_index_service.py  test_output_index_stress.py  test_pipeline_ssot.py  test_provider_policy.py  test_public_api_contract.py
(+9 files in other folders)
